--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -2,4 +2,6 @@
 collections:
   - name: ansible.posix
   - name: community.general
-
+  - name: https://github.com/confluentinc/cp-ansible.git
+    type: git
+    version: 7.6.1-post
