--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ hash_behaviour=merge
 callback_whitelist=profile_tasks
 remote_tmp=~/.ansible/tmp
 collections_paths=~/.ansible/collections:../../../
-roles_path=~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles:roles/
+roles_path=roles/
 
 [ssh_connection]
 pipelining = True
